--- a/JavaProgram1/.vscode/launch.json
+++ b/JavaProgram1/.vscode/launch.json
@@ -6,6 +6,20 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Launch YieldExample",
+            "request": "launch",
+            "mainClass": "Thread.ControlThread.YieldExample",
+            "projectName": "JavaProgram1_5fd75722"
+        },
+        {
+            "type": "java",
+            "name": "Launch ThreadClass",
+            "request": "launch",
+            "mainClass": "Thread.ThreadClass",
+            "projectName": "JavaProgram1_5fd75722"
+        },
+        {
+            "type": "java",
             "name": "Launch Main",
             "request": "launch",
             "mainClass": "MemberManageMent.Main",
